--- a/my-app/package.json
+++ b/my-app/package.json
@@ -11,7 +11,8 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "yarn": "^1.22.4"
   },
   "scripts": {
     "start": "react-scripts start",
