added the homepage link to package.json

--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,6 +1,7 @@
 {
   "name": "asas",
   "version": "0.1.0",
+  "homepage": "asastx.com",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
