--- a/my-app/package.json
+++ b/my-app/package.json
@@ -8,9 +8,11 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^4.5.0",
+    "emailjs-com": "^2.4.1",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.0.0",
+    "react-advanced-form": "^1.7.2",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.0",
     "yarn": "^1.22.4"
