--- a/my-app/package.json
+++ b/my-app/package.json
@@ -14,7 +14,8 @@
     "react-advanced-form": "^1.7.2",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.3",
     "yarn": "^1.22.4"
   },
   "scripts": {
